--- a/Spearmen Analysis.ipynb
+++ b/Spearmen Analysis.ipynb
@@ -28,6 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loading the saved models\n",
     "abstracts = Top2Vec.load('abstracts_umap35_mincount30')\n",
     "titles = Top2Vec.load('titles_umap35_vectorsize200_mincount30')"
    ]
@@ -240,6 +241,7 @@
     }
    ],
    "source": [
+    "# Topic reductioUMAP & hdbscann for both\n",
     "abstracts.hierarchical_topic_reduction(11)\n",
     "titles.hierarchical_topic_reduction(11)"
    ]
@@ -658,9 +660,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:deepNLP2020]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-deepNLP2020-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -672,7 +674,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
